Rename Silicon4 Accounting to Silicon-AI Accounting in user-facing text
- Update all template file titles and block titles

- Update JavaScript display text and comments

- Update context processors and documentation files

- Keep JavaScript object names and database names unchanged

--- a/core/templates/core/astdocument_master_detail.html
+++ b/core/templates/core/astdocument_master_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load humanize %}
 
-{% block title %}Asset Documents - Silicon4 Accounting{% endblock %}
+{% block title %}Asset Documents - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <div>
