--- a/core/templates/core/astdocumentdetail_bulk_manage.html
+++ b/core/templates/core/astdocumentdetail_bulk_manage.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Manage Asset Document Items - {{ document.DocumentNo }} - Silicon4 Accounting{% endblock %}
+{% block title %}Manage Asset Document Items - {{ document.DocumentNo }} - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <style>
