--- a/core/templates/core/cashdocument_master_detail.html
+++ b/core/templates/core/cashdocument_master_detail.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% load static %}
 
-{% block title %}Cash Documents - Silicon4 Accounting{% endblock %}
+{% block title %}Cash Documents - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 {% csrf_token %}
