--- a/core/templates/core/invdocument_form.html
+++ b/core/templates/core/invdocument_form.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% if item %}Бараа материалын баримт шинэчлэх{% else %}Бараа материалын баримт үүсгэх{% endif %} - Silicon4 Accounting</title>
+    <title>{% if item %}Бараа материалын баримт шинэчлэх{% else %}Бараа материалын баримт үүсгэх{% endif %} - Silicon-AI Accounting</title>
     <script src="{% static 'js/shared-components.js' %}"></script>
     <script src="{% static 'js/soft-delete.js' %}"></script>
 </head>
