--- a/core/templates/core/refaccount_form.html
+++ b/core/templates/core/refaccount_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{% if item %}Данс засах{% else %}Данс нэмэх{% endif %} - Silicon4 Accounting{% endblock %}
+{% block title %}{% if item %}Данс засах{% else %}Данс нэмэх{% endif %} - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <div class="max-w-4xl mx-auto">
