--- a/core/templates/core/refasset_depreciation_account_list.html
+++ b/core/templates/core/refasset_depreciation_account_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Asset Depreciation Accounts - Silicon4 Accounting{% endblock %}
+{% block title %}Asset Depreciation Accounts - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <div class="space-y-6">
