--- a/core/templates/core/trial_balance.html
+++ b/core/templates/core/trial_balance.html
@@ -8,7 +8,7 @@
 <meta name="cache-bust" content="v1.0-2025-01-31">
 <!-- Cache bust: Updated 2025-10-19 19:40 - Regular border for summary row -->
 
-{% block title %}ГҮЙЛГЭЭ БАЛАНС - Silicon4 Accounting{% endblock %}
+{% block title %}ГҮЙЛГЭЭ БАЛАНС - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <div>
