--- a/core/templates/core/trial_edit_account_and_sub_ledger.html
+++ b/core/templates/core/trial_edit_account_and_sub_ledger.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load humanize %}
 
-{% block title %}ТУСЛАХ ДЭВТЭР - Silicon4 Accounting{% endblock %}
+{% block title %}ТУСЛАХ ДЭВТЭР - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <div
