--- a/core/templates/core/trial_recpay_balance.html
+++ b/core/templates/core/trial_recpay_balance.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 <!-- Receivable/Payable Balance Report -->
 
-{% block title %}АВЛАГА, ӨГЛӨГ БАЛАНС - Silicon4 Accounting{% endblock %}
+{% block title %}АВЛАГА, ӨГЛӨГ БАЛАНС - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <div>
