--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Хяналтын самбар - Silicon4 Accounting{% endblock %}
+{% block title %}Хяналтын самбар - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <div class="space-y-2">
@@ -8,7 +8,7 @@
     <div class="bg-white shadow rounded-lg">
         <div class="px-4 py-3">
             <h1 class="text-lg lg:text-xl xl:text-2xl font-medium text-gray-900">
-                Silicon4 Accounting - системд тавтай морил
+                Silicon-AI Accounting - системд тавтай морил
             </h1>
             
         </div>
