--- a/core/templates/core/calculate_depreciation_form.html
+++ b/core/templates/core/calculate_depreciation_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Calculate Depreciation - Silicon4 Accounting{% endblock %}
+{% block title %}Calculate Depreciation - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <div class="max-w-4xl mx-auto">
