--- a/core/templates/core/calculate_depreciation_results.html
+++ b/core/templates/core/calculate_depreciation_results.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Depreciation Calculation Results - Silicon4 Accounting{% endblock %}
+{% block title %}Depreciation Calculation Results - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <div class="space-y-6">
