--- a/core/templates/core/cashdocumentdetail_bulk_manage.html
+++ b/core/templates/core/cashdocumentdetail_bulk_manage.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Журналын бичилт - {{ document.DocumentNo }} - Silicon4 Accounting{% endblock %}
+{% block title %}Журналын бичилт - {{ document.DocumentNo }} - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <div class="space-y-0">
