--- a/core/templates/core/invdocument_master_detail.html
+++ b/core/templates/core/invdocument_master_detail.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% load static %}
 
-{% block title %}Inventory Documents - Silicon4 Accounting{% endblock %}
+{% block title %}Inventory Documents - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <div>
