--- a/core/templates/core/period_lock_list.html
+++ b/core/templates/core/period_lock_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Period Lock Management - Silicon4 Accounting{% endblock %}
+{% block title %}Period Lock Management - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <!-- CSRF Token for AJAX requests -->
