--- a/core/templates/core/refclient_list.html
+++ b/core/templates/core/refclient_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Clients - Silicon4 Accounting{% endblock %}
+{% block title %}Clients - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <div class="space-y-6">
