--- a/core/templates/core/refinventory_form.html
+++ b/core/templates/core/refinventory_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ title }} - Silicon4 Accounting{% endblock %}
+{% block title %}{{ title }} - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <div class="space-y-6">
