--- a/core/templates/core/refinventory_list.html
+++ b/core/templates/core/refinventory_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Inventory - Silicon4 Accounting{% endblock %}
+{% block title %}Inventory - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 {% if is_modal %}
