--- a/core/templates/core/template_detail_form.html
+++ b/core/templates/core/template_detail_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ title }} - Silicon4 Accounting{% endblock %}
+{% block title %}{{ title }} - Silicon-AI Accounting{% endblock %}
 
 {% block content %}
 <div class="max-w-4xl mx-auto">
